# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  privkey.pem  pyproject.toml
page_analyzer/: app.py
page_analyzer/templates/: index.html  layout.html
page_analyzer/templates/urls/: index.html  show.html
